# llminf

./: CMakeLists.txt
cpp/bench/: main.cpp
cpp/engine/: generate.cpp  model.cpp  weights.cpp
include/: config.h  generate.h  kvcache.h  model.h  weights.h
scripts/: debug.py  weights.py
